refactor: теперь отчеты в text blocks